PostCube - Get app Sekce

--- a/postcube.cz/src/html/components/get-app.njk
+++ b/postcube.cz/src/html/components/get-app.njk
@@ -2,7 +2,7 @@
 <section class="get-app mdc-layout-grid">
   <div class="mdc-layout-grid__inner layout-wrapper">
     <div
-      class="get-app__content mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
+      class="get-app__content mdc-layout-grid__cell mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-8-desktop">
       <h2>Aplikace ke stažení zdarma</h2>
       <p>Stáhněte si aplikaci do svého mobilního telefonu a staňte se pánem
         příjmu i&nbsp;odesílání zásilek. Vstupte do světa, kde se na zásilky
@@ -19,6 +19,11 @@
           </button>
         </div>
       </div>
+    </div>
+    <div class="get-app__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-desktop">
+      <img alt="Fotografie iPhonů"
+           src="https://res.cloudinary.com/topmonks/image/upload/v1620732837/postcube.cz/iphone_bg.png" width="580px"
+           height="auto">
     </div>
   </div>
 </section>
