--- a/postcube.cz/src/html/components/how-it-works.njk
+++ b/postcube.cz/src/html/components/how-it-works.njk
@@ -1,5 +1,8 @@
 <section class="how-it-works icon-section mdc-layout-grid">
   <div class="mdc-layout-grid__inner layout-wrapper">
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <h2>A takhle jednoduché to je</h2>
+    </div>
     <div class="after-icon icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
       <svg xmlns="http://www.w3.org/2000/svg" width="45.993" height="40.286" viewBox="0 0 45.993 40.286">
         <defs>
