--- a/postcube.cz/src/html/components/why-pc.njk
+++ b/postcube.cz/src/html/components/why-pc.njk
@@ -6,10 +6,24 @@
   .icon-section__content {
    padding: 1.5em 0;
   }
+  .why-postcube__title {
+    color: var(--postcube-primary);
+    max-width: 840px;
+    margin: 0 auto;
+  }
+  .why-postcube__title p {
+    max-width: 680px;
+    margin: 0 auto 4em;
+  }
 </style>
 
 <section id="" class="why-postcube icon-section mdc-layout-grid">
   <div class="mdc-layout-grid__inner layout-wrapper">
+    <div class="why-postcube__title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <h2>PostCube se o&nbsp;vše postará za vás</h2>
+      <p>Věnujte se důležitějším věcem, než je vyhlížení kurýra. Zásilku
+        si vyzvednete, až se vám to bude&nbsp;hodit.</p>
+    </div>
     <div class="icon-section__content mdc-layout-grid__cell">
       <svg width="38" height="64" viewBox="0 0 38 64" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M24.2669 49.3124L21.3568 42.0087C21.2272 41.6823 21.16 41.3331 21.16 40.9832C21.16 40.2821 20.5919 39.7139 19.8914 39.7139C19.1902 39.7139 18.6227 40.2821 18.6227 40.9832C18.6227 41.3331 18.5556 41.6823 18.4259 42.0087L15.2298 50.0303C15.0424 50.5005 14.7301 50.9101 14.3265 51.215L4.44589 58.6913C3.22425 59.6154 1.48547 59.375 0.562022 58.1534C-0.362101 56.9324 -0.121668 55.1943 1.09997 54.2688L10.364 47.2593L13.0766 40.45V20.6962C8.08194 15.8546 4.5876 9.67653 3.01269 2.90142C2.71719 1.6294 3.50901 0.357391 4.78102 0.0618863C6.05303 -0.233618 7.32437 0.557528 7.62055 1.82954C9.01614 7.835 12.1458 13.2978 16.62 17.539H23.4166C27.8908 13.2985 31.0205 7.835 32.4161 1.82954C32.7109 0.557528 33.9829 -0.233618 35.2549 0.0618863C36.5283 0.357391 37.3194 1.6294 37.0246 2.90142C35.4221 9.79338 31.8351 16.0661 26.7061 20.9406V40.4506L29.7048 47.9779C29.8922 48.448 29.9473 48.9612 29.864 49.4595L27.8317 61.6819C27.5812 63.1917 26.1527 64.2132 24.6423 63.962C23.1318 63.7108 22.1097 62.283 22.3615 60.7713L24.2669 49.3124Z" fill="#1538E5"/>
