--- a/postcube.cz/src/stylesheets/components/get-app.scss
+++ b/postcube.cz/src/stylesheets/components/get-app.scss
@@ -1,7 +1,7 @@
 // Download the App - Get the App //
 .get-app {
   color: var(--postcube-white);
-  padding-top: 2em;
+  padding: 2em 2em 4em;
 
   .get-app__content {
     h2, p {
@@ -10,16 +10,35 @@
       max-width: 420px;
     }
   }
+
+
   @media screen and (min-width: 840px) {
     background-image: cloudinaryUrl("/postcube.cz/download-app_bg.png");
     background-size: 90% 500px;
     background-position: 100%;
     background-repeat: no-repeat;
-    min-height: 540px;
+    min-height: 460px;
     .get-app__content {
       margin-left: 8em;
     }
   }
+  @media screen and (min-width: 1440px) {
+    .get-app__bg {
+      position: relative;
+      img {
+        position: absolute;
+        top: -35%;
+        right: 0;
+        width: 600px;
+      }
+    }
+  }
+  @media (max-width: 1439px) {
+    .get-app__bg {
+      display: none;
+    }
+  }
+
   @media (max-width: 839px) {
     background-color: var(--postcube-primary);
     h2 {
