PostCube - Main info

--- a/postcube.cz/src/html/components/why-pc.njk
+++ b/postcube.cz/src/html/components/why-pc.njk
@@ -11,6 +11,9 @@
     max-width: 840px;
     margin: 0 auto;
   }
+  .why-postcube__title h2 {
+    margin-bottom: 14px;
+  }
   .why-postcube__title p {
     max-width: 680px;
     margin: 0 auto 4em;
