--- a/postcube.cz/src/html/domacnosti/index.njk
+++ b/postcube.cz/src/html/domacnosti/index.njk
@@ -17,6 +17,12 @@
       width: 100%;
       height: auto;
     }
+    .main-info {
+      background-image: cloudinaryUrl("/postcube.cz/section-bg01.png");
+      background-size: 100% auto;
+      background-position: 100%;
+      background-repeat: no-repeat;
+    }
     .main-info__content {
       max-width: 380px;
     }
@@ -91,7 +97,6 @@
   </section>
   {% include 'components/why-pc.njk' %}
 
-  <h2 class="content-title">A&nbsp;takhle jednoduché to je</h2>
   {% include 'components/how-it-works.njk' %}
   {% include 'components/get-app.njk' %}
   {% include 'components/choose-pc.njk' %}
