--- a/postcube.cz/src/html/firmy/index.njk
+++ b/postcube.cz/src/html/firmy/index.njk
@@ -17,6 +17,13 @@
       width: 100%;
       height: auto;
     }
+    .main-info {
+      background-image: cloudinaryUrl("/postcube.cz/section-bg02.png");
+      background-size: 100% auto;
+      background-position: 100%;
+      background-repeat: no-repeat;
+    }
+
     .testimonial__content {
       max-width: 80%;
     }
@@ -28,7 +35,7 @@
 {% endblock %}
 
 {% block content %}
-  <section id="main-info" class="main-info">
+  <section id="" class="main-info">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner layout-wrapper">
         <div class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
