--- a/postcube.cz/src/stylesheets/components/get-app.scss
+++ b/postcube.cz/src/stylesheets/components/get-app.scss
@@ -27,9 +27,9 @@
       position: relative;
       img {
         position: absolute;
+        right: -11%;
         top: -35%;
-        right: 0;
-        width: 600px;
+        width: 580px;
       }
     }
   }
