--- a/postcube.cz/src/html/prepravci/index.njk
+++ b/postcube.cz/src/html/prepravci/index.njk
@@ -2,7 +2,7 @@
 {% set language = cs %}
 
 {% block title %}
-  PostCube - Domácnosti
+  PostCube - Přepravci
 {% endblock %}
 {% block head %}
   <meta name="description"
@@ -24,10 +24,17 @@
       background-repeat: no-repeat;
     }
     .main-info__content {
-      max-width: 97%;
+      max-width: 95%;
     }
-    .testimonial__content {
-      max-width: 80%;
+    .transport {
+      background-color: var(--postcube-grey-light);
+    }
+    .transport__link {
+     margin: 4em 0;
+    }
+    .transport__link a {
+      font-size: 24px;
+      text-decoration: none;
     }
   </style>
 
@@ -38,65 +45,143 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner layout-wrapper">
         <div class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-          <h1>PostCube k&nbsp;rodinnému domu</h1>
-          <p>Zásilka vám dorazí nezávisle na tom, co právě děláte. Kurýr ji
-            zvládne doručit bez vaší přítomnosti!
-          <b>#necekamnakuryra</b></p>
+          <h1>Vaši kurýři nás budou milovat!</h1>
+          <p>PostCube šetří náklady a ulehčí práci kurýrům. Spolupracujte
+            s&nbsp;námi a zajistěte svým zákazníkům maximální pohodlí při online
+            nakupování.</p>
         </div>
         <div class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         </div>
       </div>
     </div>
   </section>
-
   <section id="about" class="about icon-section mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <h2>Doručení i&nbsp;vyzvednutí je s&nbsp;PostCube hračka.</h2>
+      </div>
       <div class="icon-section__content mdc-layout-grid__cell">
         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M38.6105 16.2947L33.6 15.7895C33.4316 15.7895 33.2632 15.6632 33.2211 15.4947C33.0105 14.9474 32.8 14.4 32.5474 13.8526C32.4632 13.6842 32.5053 13.5158 32.5895 13.3474L35.7474 9.47368C36.2526 8.8421 36.2105 7.95789 35.6211 7.36842L32.6316 4.33684C32.0842 3.78947 31.1579 3.70526 30.5263 4.21053L26.6526 7.36842C26.5263 7.49474 26.3158 7.49474 26.1474 7.41053C25.6 7.1579 25.0947 6.90526 24.5053 6.73684C24.3368 6.69474 24.2105 6.52632 24.2105 6.35789L23.7053 1.38947C23.6211 0.589474 22.9474 0 22.1474 0H17.8526C17.0526 0 16.3789 0.589474 16.2947 1.38947L15.7895 6.4C15.7895 6.56842 15.6632 6.73684 15.4947 6.77895C14.9474 6.98947 14.4 7.2 13.8526 7.45263C13.6842 7.53684 13.5158 7.49474 13.3474 7.41053L9.47368 4.25263C8.8421 3.74737 7.95789 3.78947 7.36842 4.37895L4.33684 7.36842C3.78947 7.91579 3.70526 8.8421 4.21053 9.47368L7.36842 13.3474C7.49474 13.4737 7.49474 13.6842 7.41053 13.8526C7.1579 14.4 6.90526 14.9053 6.73684 15.4947C6.69474 15.6632 6.52632 15.7895 6.35789 15.7895L1.38947 16.2947C0.589474 16.3789 0 17.0526 0 17.8526V22.1474C0 22.9474 0.589474 23.6211 1.38947 23.7053L6.4 24.2105C6.56842 24.2105 6.73684 24.3368 6.77895 24.5053C6.98947 25.0526 7.2 25.6 7.45263 26.1474C7.53684 26.3158 7.49474 26.4842 7.41053 26.6526L4.25263 30.5263C3.74737 31.1579 3.78947 32.0421 4.37895 32.6316L7.41053 35.6632C7.95789 36.2105 8.88421 36.2947 9.51579 35.7895L13.3895 32.6316C13.5158 32.5053 13.7263 32.5053 13.8947 32.5895C14.4421 32.8421 14.9474 33.0947 15.5368 33.2632C15.7053 33.3053 15.8316 33.4737 15.8316 33.6421L16.3368 38.6105C16.4211 39.4105 17.0947 40 17.8947 40H22.1895C22.9895 40 23.6632 39.4105 23.7474 38.6105L24.2105 33.6C24.2105 33.4316 24.3368 33.2632 24.5053 33.2211C25.0526 33.0105 25.6 32.8 26.1474 32.5474C26.3158 32.4632 26.4842 32.5053 26.6526 32.5895L30.5263 35.7474C31.1579 36.2526 32.0421 36.2105 32.6316 35.6211L35.6632 32.5895C36.2105 32.0421 36.2947 31.1158 35.7895 30.4842L32.6316 26.6105C32.5053 26.4842 32.5053 26.2737 32.5895 26.1053C32.8421 25.5579 33.0947 25.0526 33.2632 24.4632C33.3053 24.2947 33.4737 24.1684 33.6421 24.1684L38.6105 23.6632C39.4105 23.5789 40 22.9053 40 22.1053V17.8526C40 17.0526 39.4105 16.3789 38.6105 16.2947ZM20 28.5474C15.2842 28.5474 11.4526 24.7158 11.4526 20C11.4526 15.2842 15.2842 11.4526 20 11.4526C24.7158 11.4526 28.5474 15.2842 28.5474 20C28.5474 24.7158 24.7158 28.5474 20 28.5474Z" fill="#1538E5"/>
           <path d="M22.1473 16.7158L19.0315 20.4211L17.8947 19.0316C17.3473 18.3579 16.3789 18.2737 15.7052 18.8211C15.0315 19.3684 14.9473 20.3369 15.4947 21.0105L17.8526 23.8316C18.1473 24.1684 18.5684 24.379 19.0315 24.379C19.4947 24.379 19.9157 24.1684 20.2105 23.8316L24.5052 18.6527C25.0526 17.979 24.9684 17.0105 24.2947 16.4632C23.6631 15.9579 22.6947 16.0421 22.1473 16.7158Z" fill="#1538E5"/>
         </svg>
-        <h3>Snadná instalace</h3>
-        <p>Poštovní box pohání čtyři tužkové baterie a nevyžaduje připojení
-          k&nbsp;internetu. Díky tomu může stát kdekoliv u&nbsp;domu nebo na zahradě.</p>
+        <h3>Automatizované</h3>
+        <p>Už žádné nekonečné obvolávání příjemce a čekání na jeho
+          příchod. Kurýr vše zvládne bezkontaktně.</p>
       </div>
       <div class="icon-section__content mdc-layout-grid__cell">
         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M0 5H5V15L10 20L5 25V35H0V40H40V35H35V25L30 20L35 15V5H40V0H0V5ZM10 5H30V15L25 20L30 25V35L20 25L10 35V25L15 20L10 15V5Z" fill="#1538E5"/>
           <path d="M25 15H15L20 20L25 15Z" fill="#1538E5"/>
         </svg>
-        <h3>Bez čekání na kurýra</h3>
-        <p>Online nakupování vás bude bavit. Zásilku si totiž vyzvednete až ve
-          chvíli, kdy chcete vy. Klidně v&nbsp;jednu ráno a v&nbsp;pyžamu.</p>
+        <h3>Rychlé</h3>
+        <p>Kurýrovi stačí s&nbsp;PostCube v&nbsp;průměru pouhých 38&nbsp;sekund na doručení
+          listovní zásilky nebo balíku.</p>
       </div>
       <div class="icon-section__content mdc-layout-grid__cell">
         <svg width="27" height="40" viewBox="0 0 27 40" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M5.30339 19V15.5717C3.80647 14.25 2.86554 12.3087 2.86554 10.1609C2.86554 6.11304 6.28708 2.8087 10.4785 2.8087C14.6699 2.8087 18.0914 6.11304 18.0914 10.1609C18.0914 12.2674 17.1505 14.2087 15.6536 15.5304V16.3152C16.5517 16.3978 17.4071 16.687 18.1342 17.1413C19.8877 15.3239 20.9997 12.887 20.9997 10.1609C21.0425 4.54348 16.2951 0 10.5212 0C4.70462 0 0 4.54348 0 10.1609C0 13.9196 2.13846 17.2239 5.30339 19Z" fill="#1538E5"/>
           <path d="M27 24.4154C27 23.0179 25.8565 21.8744 24.4164 21.8744C23.4847 21.8744 22.6799 22.3403 22.2564 23.1026V23.0179C22.2564 21.6203 21.1129 20.4345 19.6728 20.4345C18.7411 20.4345 17.9363 20.9004 17.5128 21.6203V21.578C17.5128 20.1805 16.3693 18.9947 14.9292 18.9947C13.9975 18.9947 13.1927 19.4605 12.7692 20.1805V11.5835C12.7692 10.9059 12.5151 10.2283 12.0069 9.76242C11.541 9.29657 10.8633 9.00012 10.1856 9.00012C8.78798 9.00012 7.64444 10.1436 7.64444 11.5835V27.4646C7.64444 27.634 7.55973 27.7187 7.43267 27.8034C7.30561 27.8458 7.13619 27.8458 7.05149 27.7187L4.42557 25.1354C3.53614 24.246 2.18083 24.119 1.12199 24.8389C0.529043 25.2624 0.105507 25.8977 0.0208001 26.6176C-0.063907 27.3376 0.105507 28.0998 0.613749 28.6504L7.09384 36.4851C8.91504 38.7296 11.6257 40.0001 14.5057 40.0001H18.5293C20.774 40.0001 22.9341 39.1108 24.5011 37.5015C26.1106 35.8922 27 33.7747 27 31.5302V24.4154Z" fill="#1538E5"/>
         </svg>
-        <h3>Úžasně jednoduché</h3>
-        <p>Při objednávce zboží stačí zadat číslo poštovní schránky. Mobilní
-          aplikace vás pak sama upozorní, že balík právě přišel.</p>
+        <h3>Jednoduché</h3>
+        <p>Schránka se otevírá přes Bluetooth. Kurýr nepotřebuje znát PIN kód,
+          nosit u&nbsp;sebe klíče nebo instalovat další aplikaci.</p>
       </div>
       <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a href="#contact" class="action-btn__label">Objednat PostCube</a>
+        <a href="#contact" class="action-btn__label">Domluvit spolupráci</a>
       </div>
     </div>
   </section>
   {% include 'components/guarantee.njk' %}
-
-  <section class="testimonial mdc-layout-grid">
+  <section id="" class="transport icon-section mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
-      <div class="testimonial__content mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Cože? Vy jste teď přijel? Ale já už nejsem doma. A&nbsp;kde že si to mám
-          vyzvednout?</h2>
-        <p>Slova, která už nikdy nebudete muset vyslovit.</p>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <h2>Bezkontaktní doručování zcela mění proces přepravy zásilek.</h2>
+      </div>
+      <div class="icon-section__content mdc-layout-grid__cell">
+        <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M24 21.998C26.874 22.874 29.124 25.126 29.998 28C30.878 25.126 33.128 22.876 36 22C33.128 21.122 30.878 18.874 29.998 16C29.124 18.872 26.874 21.122 24 21.998ZM40.002 22C41.918 22.586 43.416 24.084 44.002 26.002C44.584 24.084 46.086 22.584 48 22C46.086 21.416 44.586 19.916 44 18C43.414 19.916 41.916 21.416 40.002 22ZM38.002 4C37.128 6.874 34.876 9.124 32.006 10.002C34.882 10.882 37.128 13.13 38.008 16.006C38.882 13.13 41.134 10.88 44 10.002C41.134 9.128 38.882 6.874 38.002 4ZM24 48C10.766 48 0 37.234 0 24C0 10.766 10.766 0 24 0C27.788 0 31.26 0.994 34.74 2.358C28.844 3.366 16 8.89 16 24C16 38.908 27.834 44.416 34.74 45.642C31.74 47.334 27.788 48 24 48Z" fill="#1538E5"/>
+        </svg>
+        <h3>Noční doručování</h3>
+        <p>Celé město spí, silnice jsou prázdné a vy nerušeně doručujete a
+          vyzvedáváte poštovní zásilky.</p>
+      </div>
+      <div class="icon-section__content mdc-layout-grid__cell">
+        <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M10 36H8C6.896 36 6 35.104 6 34V30H30V12H39.334C41.568 12 42.534 13.152 43.206 14.214C44.394 16.094 46.278 19.078 47.424 20.97C47.8 21.594 48 22.31 48 23.04V32C48 34.242 46.544 36 44 36H42C42 39.312 39.312 42 36 42C32.688 42 30 39.312 30 36H22C22 39.312 19.312 42 16 42C12.688 42 10 39.312 10 36ZM16 33.6C17.324 33.6 18.4 34.676 18.4 36C18.4 37.324 17.324 38.4 16 38.4C14.676 38.4 13.6 37.324 13.6 36C13.6 34.676 14.676 33.6 16 33.6ZM36 33.6C37.324 33.6 38.4 34.676 38.4 36C38.4 37.324 37.324 38.4 36 38.4C34.676 38.4 33.6 37.324 33.6 36C33.6 34.676 34.676 33.6 36 33.6ZM16 16H0V12H16V10H6V8C6 6.896 6.896 6 8 6H26C27.104 6 28 6.896 28 8V28H6V22H2V18H16V16ZM34 16V22H43.43L40.576 17.008C40.22 16.384 39.558 16 38.84 16H34Z" fill="#1538E5"/>
+        </svg>
+        <h3>Rychlé odbavování</h3>
+        <p>80&nbsp;% zákazníků preferuje doručení domů. Dělejte to lépe než
+          konkurence. Efektivně a spolehlivě.</p>
+      </div>
+      <div class="icon-section__content mdc-layout-grid__cell">
+        <svg width="40" height="48" viewBox="0 0 40 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M33.7655 0H5.95862C2.66897 0 0 2.6875 0 6V58C0 61.3125 2.66897 64 5.95862 64H33.7655C37.0552 64 39.7241 61.3125 39.7241 58V6C39.7241 2.6875 37.0552 0 33.7655 0ZM19.8621 60C17.6648 60 15.8897 58.2125 15.8897 56C15.8897 53.7875 17.6648 52 19.8621 52C22.0593 52 23.8345 53.7875 23.8345 56C23.8345 58.2125 22.0593 60 19.8621 60ZM33.7655 46.5C33.7655 47.325 33.0952 48 32.2759 48H7.44829C6.62898 48 5.95864 47.325 5.95864 46.5V7.49999C5.95864 6.67499 6.62898 5.99999 7.44829 5.99999H32.2759C33.0952 5.99999 33.7655 6.67499 33.7655 7.49999V46.5Z" fill="#1538E5"/>
+        </svg>
+        <h3>Spokojení kurýři</h3>
+        <p>Už žádné čekání, obvolávání ani zdlouhavé řešení převzetí
+          zásilek. Vše zvládnete nezávisle na příjemci.</p>
+      </div>
+      <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <a href="#contact" class="action-btn__label">Chci spolupracovat</a>
       </div>
     </div>
   </section>
-  {% include 'components/why-pc.njk' %}
 
-  {% include 'components/how-it-works.njk' %}
+  <section class="icon-section mdc-layout-grid">
+    <div class="mdc-layout-grid__inner layout-wrapper">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <h2>Jak doručování s&nbsp;PostCube funguje?</h2>
+      </div>
+      <div class="after-icon icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+        <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M0 0V32.0002L16.0004 48H48.0005V16.0001L32.0001 0H0Z" fill="#1538E5"/>
+          <path d="M25.7163 15.6H21.1723C20.8523 18.064 19.7643 18.8 17.8763 18.8H16.3723V22.928H17.9723C18.9323 22.928 20.4683 22.64 20.8843 22.032V38H25.7163V15.6ZM29.382 33.392V38H34.214V33.392H29.382Z" fill="white"/>
+        </svg>
+        <h3>Příprava zásilky</h3>
+        <p>Zákazník vloží zásilku pro odeslání do boxu a v&nbsp;aplikaci vyplní
+          údaje o&nbsp;příjemci. Při doručování zásilky ji kurýr vyzvedne
+          u&nbsp;prodejce.</p>
+      </div>
+      <div
+        class="after-icon icon-section__content link-icon--after-2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+        <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M0 0V32.0002L16.0004 48H48.0005V16.0001L32.0001 0H0Z" fill="#1538E5"/>
+          <path d="M16.658 23.568H21.49C21.426 21.008 22.578 19.248 24.786 19.248C26.802 19.248 27.986 20.496 27.986 22.384C27.986 23.888 27.058 25.04 25.426 25.808L21.778 27.632C19.698 28.656 16.722 30.96 16.722 34.448L16.754 38H32.754V33.84H21.522C21.522 32.784 22.834 31.952 23.922 31.376L27.474 29.584C31.058 27.792 32.818 25.424 32.818 22.384C32.818 18.128 29.554 15.344 24.786 15.344C19.794 15.344 16.594 18.448 16.658 23.568ZM35.2883 33.392V38H40.1203V33.392H35.2883Z" fill="white"/>
+        </svg>
+        <h3>Získání informací</h3>
+        <p>Kurýr obdrží do aplikace notifikaci o&nbsp;nové přepravě, kde přehledně
+          vidí adresu, číslo balíku, telefonní kontakt a dodatečné informace,
+          například o&nbsp;umístění&nbsp;boxu.</p>
+      </div>
+      <div
+        class="icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+        <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M0 0V32.0002L16.0004 48H48.0005V16.0001L32.0001 0H0Z" fill="#1538E5"/>
+          <path d="M24.0793 38.256C28.5593 38.256 32.4633 35.696 32.4633 31.344C32.4633 28.912 31.0553 26.992 28.8793 26.192C30.4792 25.296 31.5353 23.504 31.5353 21.424C31.5353 18.096 28.2393 15.344 23.8553 15.344C19.7913 15.344 16.0473 17.968 16.0153 22.448H20.5593C20.5913 20.368 21.9353 19.472 23.7593 19.472C25.6153 19.472 26.8953 20.432 26.8953 21.936C26.8953 23.44 25.7433 24.496 23.9833 24.496H21.9353V28.432H24.0793C26.2873 28.432 27.6953 29.488 27.6953 31.216C27.6953 33.008 26.2873 34.096 24.0793 34.096C21.9993 34.096 20.2713 33.04 20.2713 30.928H15.6313C15.6313 35.536 19.4073 38.256 24.0793 38.256ZM35.507 33.392V38H40.339V33.392H35.507Z" fill="white"/>
+        </svg>
+        <h3>Otevření schránky</h3>
+        <p>Pomocí jednorázového odkazu ve své aplikaci kurýr otevře schránku,
+          vloží do něj zásilku nebo naopak zásilku vyzvedne.</p>
+      </div>
+      <div
+        class="icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+        <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M0 0V32.0002L16.0004 48H48.0005V16.0001L32.0001 0H0Z" fill="#1538E5"/>
+          <path d="M27.4896 38H32.3216V33.584H34.9456V29.456H32.3216V15.6H27.1696L16.2576 29.456V33.584H27.4896V38ZM20.9936 29.456L27.5216 21.456V29.456H20.9936ZM37.2726 33.392V38H42.1046V33.392H37.2726Z" fill="white"/>
+        </svg>
+        <h3>Doručení zásilky</h3>
+        <p>V&nbsp;okamžiku, kdy kurýr v&nbsp;aplikaci označí zásilku jako doručenou nebo
+          vyzvednutou, přijde zákazníkovi upozornění do jeho mobilní aplikace.</p>
+      </div>
+      <div class="transport__link mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <a href="#" class="">Další podrobnosti o&nbsp;schránce PostCube</a>
+      </div>
+    </div>
+  </section>
+
+
+
   {% include 'components/get-app.njk' %}
   {% include 'components/choose-pc.njk' %}
   {% include 'components/create-pc.njk' %}
