--- a/postcube.cz/src/html/domacnosti/index.njk
+++ b/postcube.cz/src/html/domacnosti/index.njk
@@ -119,7 +119,7 @@
             <input datatype="email" id="phone-name" placeholder="Email" type="text">
             <div class="mdc-layout-grid__inner">
               <div class="contact__form--button mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone">
-                <button class="mdc-button" type="submit">
+                <button class="mdc-button content-btn" type="submit">
                   <a href="#" class="mdc-button__label">ODESLAT</a>
                 </button>
               </div>
