--- a/postcube.cz/src/html/components/header.njk
+++ b/postcube.cz/src/html/components/header.njk
@@ -1,9 +1,8 @@
 <header class="app-bar">
   <div class="mdc-layout-grid layout-wrapper">
     <div class="mdc-layout-grid__inner">
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-3-desktop">
-        <a class="logo logo--desktop" href="/" title="Go to homepage">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-3-desktop">
+        <a class="logo logo__hp logo--desktop" href="/" title="Go to homepage">
           <svg xmlns="http://www.w3.org/2000/svg" width="286.628" height="286.626" viewBox="0 0 286.628 286.626">
             <defs>
               <style>.a {
@@ -48,50 +47,10 @@
             </g>
           </svg>
         </a>
-        <a class="logo logo--phone" href="/" title="Go to homepage">
-          <svg xmlns="http://www.w3.org/2000/svg" width="286.628" height="286.626" viewBox="0 0 286.628 286.626">
-            <defs>
-              <style>.a {
-                  fill: #1538e5;
-                }
-
-                .b {
-                  fill: #fff;
-                }</style>
-            </defs>
-            <g transform="translate(-40 80)">
-              <g transform="translate(40 -80)">
-                <path class="a" d="M186.978,65.259v97.605L376,351.885h97.605v-97.6L284.583,65.259Z"
-                      transform="translate(-186.978 -65.259)"/>
-                <g transform="translate(146.323 201.712)">
-                  <path class="b"
-                        d="M298.133,301.015v-22.9h9.42c4.874,0,7.72,3.009,7.72,7.229,0,4.187-2.845,7.229-7.72,7.229h-4.481v8.439Zm4.939-12.528h4.187a3.143,3.143,0,1,0,0-6.281h-4.187Z"
-                        transform="translate(-298.133 -277.856)"/>
-                  <path class="b"
-                        d="M328.077,297.861a8.7,8.7,0,1,1,8.7,8.5A8.319,8.319,0,0,1,328.077,297.861Zm12.823,0c0-2.748-1.668-4.613-4.121-4.613s-4.122,1.865-4.122,4.613c0,2.715,1.668,4.579,4.122,4.579S340.9,300.576,340.9,297.861Z"
-                        transform="translate(-311.692 -282.945)"/>
-                  <path class="b"
-                        d="M360.266,300.543h3.926a2.722,2.722,0,0,0,3.009,2.387c1.407,0,2.388-.687,2.388-1.6,0-3.37-8.865-.066-8.865-7,0-2.911,2.519-4.972,5.888-4.972,3.958,0,6.641,2.126,6.8,5.365h-3.958a2.617,2.617,0,0,0-2.715-2.159c-1.275,0-2.159.556-2.159,1.6,0,3.369,9.028-.458,9.028,7,0,3.14-2.552,5.2-6.411,5.2C363.177,306.366,360.43,304.109,360.266,300.543Z"
-                        transform="translate(-326.268 -282.945)"/>
-                  <path class="b"
-                        d="M388,280.927h4.546V285.8h4.416v3.794h-4.416v6.216a2.085,2.085,0,0,0,2.322,2.355h2.094v4.121h-2.715c-3.795,0-6.248-2.159-6.248-5.986v-6.706h-3.173V285.8H388Z"
-                        transform="translate(-337.387 -279.128)"/>
-                  <path class="b"
-                        d="M408.1,289.349c0-7.72,5.365-11.71,11.482-11.71,5.757,0,9.977,3.271,10.6,8.211h-5.136c-.327-2.388-2.584-3.991-5.462-3.991-3.7,0-6.542,2.584-6.542,7.49s2.846,7.458,6.542,7.458c2.944,0,5.2-1.6,5.593-3.958h4.907c-.425,4.907-4.645,8.211-10.5,8.211C413.365,301.06,408.1,297.07,408.1,289.349Z"
-                        transform="translate(-347.926 -277.639)"/>
-                  <path class="b"
-                        d="M465.863,289.834V306.32h-4.579v-2.289a5.6,5.6,0,0,1-5.005,2.551c-3.7,0-6.117-2.715-6.117-6.477V289.834h4.547v9.258a3.185,3.185,0,0,0,3.173,3.435,3.427,3.427,0,0,0,3.4-3.664v-9.028Z"
-                        transform="translate(-366.974 -283.161)"/>
-                  <path class="b"
-                        d="M529.891,300.51c-.654,3.566-3.795,5.855-7.851,5.855a8.267,8.267,0,0,1-8.472-8.538c0-4.187,2.551-8.472,8.145-8.472,5.822,0,8.145,4.285,8.145,8.047,0,.622-.033,1.112-.065,1.472H517.951a3.956,3.956,0,0,0,4.089,3.762c1.831,0,3.042-.72,3.4-2.126ZM518.017,296h7.295a3.41,3.41,0,0,0-3.6-3.3C519.652,292.693,518.409,293.707,518.017,296Z"
-                        transform="translate(-395.684 -282.945)"/>
-                  <path class="b"
-                        d="M490.847,284.654a5.57,5.57,0,0,0-4.579,2v-7.678h-4.547V301.4h4.547v-1.8a5.515,5.515,0,0,0,4.514,2.06c4.874,0,7.785-3.369,7.785-8.5S495.656,284.654,490.847,284.654Zm-.785,13.084c-2.453,0-4.056-1.832-4.056-4.579,0-2.781,1.6-4.612,4.056-4.612,2.388,0,4.024,1.831,4.024,4.612C494.085,295.906,492.45,297.738,490.062,297.738Z"
-                        transform="translate(-381.264 -278.242)"/>
-                </g>
-              </g>
-            </g>
-          </svg></div>
+        <a class="logo logo__subpage logo--phone" href="/" title="Go to homepage">
+          PostCube
+        </a>
+      </div>
       <div
         class="hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-5-tablet">
         <div class="hamburger__container">
