Post Cube - Stylizace Header's Logo

--- a/postcube.cz/src/html/components/header.njk
+++ b/postcube.cz/src/html/components/header.njk
@@ -1,7 +1,7 @@
 <header class="app-bar">
   <div class="mdc-layout-grid layout-wrapper">
     <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-3-desktop">
+      <div class="app-bar__logo mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-3-desktop">
         <a class="logo logo__hp logo--desktop" href="/" title="Go to homepage">
           <svg xmlns="http://www.w3.org/2000/svg" width="286.628" height="286.626" viewBox="0 0 286.628 286.626">
             <defs>
@@ -74,7 +74,7 @@
               </div>
             </div>
             <li class=""><a href="#how-it-works">Jak box funguje</a></li>
-            <li class=""><a href="#contact">Kontakt</a></li>
+            <li class=""><a href="/o-nas">Kontakt</a></li>
             <li class=""><a class="list__btn" href="#contact">Objednat box</a></li>
             <li class=""><a class="list__lang--cz" href="/">CZ</a></li>
           </ul>
