--- a/postcube.cz/src/stylesheets/typography.scss
+++ b/postcube.cz/src/stylesheets/typography.scss
@@ -82,6 +82,7 @@ body {
 
 // Buttons //
 button.content-btn {
+  font-family: 'Roobert';
   width: 100%;
   height: 56px;
   background-color: var(--postcube-secondary);
