Post Cube - O nás Background Pic

--- a/postcube.cz/src/html/o-nas/index.njk
+++ b/postcube.cz/src/html/o-nas/index.njk
@@ -37,13 +37,20 @@
     .main-info__content a:hover {
       border-bottom: 2px solid var(--postcube-secondary);
     }
-
-    .main-info__content span, .main-info__content a {
-      margin-left: 3em;
+    .team__member--photo {
+      margin: 32px 32px 0 0;
     }
-
-    .main-info__content--email {
-      margin: 4em 0 1em;
+    .team__member--details {
+      max-width: 617px;
+    }
+    @media screen and (min-width: 840px) {
+      .main-info {
+        align-self: center;
+        background-image: url("https://res.cloudinary.com/topmonks/image/upload/v1620804984/postcube.cz/contact-map.png");
+        background-size: 45% auto;
+        background-position: center right;
+        background-repeat: no-repeat;
+      }
     }
   </style>
 
@@ -75,9 +82,6 @@
           <div class="main-info__content--phone">
             <a property="telephone" href="tel:+420732364404">+420&nbsp;732&nbsp;364&nbsp;404</a>
           </div>
-
-          <div class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-          </div>
         </div>
       </div>
     </div>
@@ -88,10 +92,50 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Kdo za projektem stojí?</h2>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+        <div class="team__member--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+          <img alt="Fotografie Jana Slavíčka" src="https://res.cloudinary.com/topmonks/image/upload/v1620804034/postcube.cz/Team/jan-slavicek.png" width="180px" height="180px">
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop">
-
+        <div class="team__member--details mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop">
+          <h3>Jan Slavíček</h3>
+          <p>Historicky působil v&nbsp;desítkách společností napříč segmenty (Česká
+            pošta, ČS,a.s., ČSOB pojišťovna, Austin Power, Novatop, Zátiší Group,
+            Ista ČR, Collect Point, Steiner transocean).</p>
+          <p>V&nbsp;současné době doplňuje svoje podnikání stavbou interních systémů
+            vzdělávání ve společnostech, které to považují za zásadní pro svůj
+            další růst (Etnetera, MeDitorial, testuj.to,&nbsp;ADM).</p>
+          <p>Spolupracuje na Interim a Expertní úrovni s&nbsp;Moravskoslezkým inovačním
+            centrem MSIC na poli komerčních služeb a Founders 4&nbsp;Founders Clubu.
+            Facilituje několik Leadership Master Mindových&nbsp;kruhů.</p>
+        </div>
+        <div class="team__member--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+          <img alt="Logo Firmy Lakum" src="https://res.cloudinary.com/topmonks/image/upload/v1620804087/postcube.cz/Team/Lakum.png" width="180px" height="180px">
+        </div>
+        <div class="team__member--details mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop">
+          <h3>Jan Slavíček</h3>
+          <p>Historicky působil v&nbsp;desítkách společností napříč segmenty (Česká
+            pošta, ČS,a.s., ČSOB pojišťovna, Austin Power, Novatop, Zátiší Group,
+            Ista ČR, Collect Point, Steiner transocean).</p>
+          <p>V&nbsp;současné době doplňuje svoje podnikání stavbou interních systémů
+            vzdělávání ve společnostech, které to považují za zásadní pro svůj
+            další růst (Etnetera, MeDitorial, testuj.to,&nbsp;ADM).</p>
+          <p>Spolupracuje na Interim a Expertní úrovni s&nbsp;Moravskoslezkým inovačním
+            centrem MSIC na poli komerčních služeb a Founders 4&nbsp;Founders Clubu.
+            Facilituje několik Leadership Master Mindových&nbsp;kruhů.</p>
+        </div>
+        <div class="team__member--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+          <img alt="Logo Firmy TopMonks" src="https://res.cloudinary.com/topmonks/image/upload/v1620804164/postcube.cz/Team/TopMonks.png" width="180px" height="180px">
+        </div>
+        <div class="team__member--details mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop">
+          <h3>Jan Slavíček</h3>
+          <p>Historicky působil v&nbsp;desítkách společností napříč segmenty (Česká
+            pošta, ČS,a.s., ČSOB pojišťovna, Austin Power, Novatop, Zátiší Group,
+            Ista ČR, Collect Point, Steiner transocean).</p>
+          <p>V&nbsp;současné době doplňuje svoje podnikání stavbou interních systémů
+            vzdělávání ve společnostech, které to považují za zásadní pro svůj
+            další růst (Etnetera, MeDitorial, testuj.to,&nbsp;ADM).</p>
+          <p>Spolupracuje na Interim a Expertní úrovni s&nbsp;Moravskoslezkým inovačním
+            centrem MSIC na poli komerčních služeb a Founders 4&nbsp;Founders Clubu.
+            Facilituje několik Leadership Master Mindových&nbsp;kruhů.</p>
         </div>
       </div>
     </div>
