--- a/postcube.cz/src/stylesheets/components/header.scss
+++ b/postcube.cz/src/stylesheets/components/header.scss
@@ -6,9 +6,6 @@ header {
   .app-bar__logo {
     align-self: center;
   }
-  .layout-wrapper {
-    padding-left: 0;
-  }
 
   nav {
     float: right;
@@ -107,6 +104,11 @@ header {
   }
   .dropdown:hover .dropdown-content {
     display: block;
+  }
+  @media screen and (min-width: 1440px) {
+    .layout-wrapper {
+      padding-left: 0;
+    }
   }
 }
 
