PostCube - HP Background Pic

--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -25,6 +25,27 @@
     .testimonial__content {
       max-width: 520px;
     }
+
+    @media (min-width: 840px) and (max-width: 2039px) {
+      .main-info {
+        align-self: center;
+        background-image: url("https://res.cloudinary.com/topmonks/image/upload/v1620806015/postcube.cz/deliveryman.png");
+        background-size: 45% auto;
+        background-position: center left;
+        background-repeat: no-repeat;
+      }
+    }
+    @media (min-width: 2040px) {
+      .main-info {
+        min-width: 700px;
+        align-self: center;
+        background-image: url("https://res.cloudinary.com/topmonks/image/upload/v1620806015/postcube.cz/deliveryman.png");
+        background-size: 45% auto;
+        background-position: center left;
+        background-repeat: no-repeat;
+        min-height: 600px;
+      }
+    }
   </style>
 
 {% endblock %}
