PostCube - Subpages Top BG

--- a/postcube.cz/src/html/firmy/index.njk
+++ b/postcube.cz/src/html/firmy/index.njk
@@ -30,6 +30,16 @@
     .main-info__content {
       max-width: 97%;
     }
+    @media screen and (min-width: 840px) {
+      .main-info {
+        align-self: center;
+        background-image: url("https://res.cloudinary.com/topmonks/image/upload/v1620652588/postcube.cz/section-bg02.png");
+        background-size: 45% auto;
+        background-position: center right;
+        background-repeat: no-repeat;
+        margin-top: 4em;
+      }
+    }
   </style>
 
 {% endblock %}
