--- a/postcube.cz/src/html/o-nas/index.njk
+++ b/postcube.cz/src/html/o-nas/index.njk
@@ -50,6 +50,7 @@
         background-size: 45% auto;
         background-position: center right;
         background-repeat: no-repeat;
+        margin-top: 4em;
       }
     }
   </style>
