--- a/postcube.cz/src/html/domacnosti/index.njk
+++ b/postcube.cz/src/html/domacnosti/index.njk
@@ -17,17 +17,21 @@
       width: 100%;
       height: auto;
     }
-    .main-info {
-      background-image: cloudinaryUrl("/postcube.cz/section-bg01.png");
-      background-size: 100% auto;
-      background-position: 100%;
-      background-repeat: no-repeat;
-    }
     .main-info__content {
       max-width: 97%;
     }
     .testimonial__content {
       max-width: 80%;
+    }
+    @media screen and (min-width: 840px) {
+      .main-info {
+        align-self: center;
+        background-image: url("https://res.cloudinary.com/topmonks/image/upload/v1620652588/postcube.cz/section-bg01.png");
+        background-size: 45% auto;
+        background-position: center right;
+        background-repeat: no-repeat;
+        margin-top: 4em;
+      }
     }
   </style>
 
