--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -33,6 +33,7 @@
         background-size: 45% auto;
         background-position: center left;
         background-repeat: no-repeat;
+        margin-top: 4em;
       }
     }
     @media (min-width: 2040px) {
@@ -44,6 +45,7 @@
         background-position: center left;
         background-repeat: no-repeat;
         min-height: 600px;
+        margin-top: 4em;
       }
     }
   </style>
