Prepare blank configurator page

--- a/postcube.cz/src/html/components/header.njk
+++ b/postcube.cz/src/html/components/header.njk
@@ -75,7 +75,7 @@
             </div>
             <li class=""><a href="#how-it-works">Jak box funguje</a></li>
             <li class=""><a href="/o-nas">Kontakt</a></li>
-            <li class=""><a class="list__btn" href="#contact">Objednat box</a></li>
+            <li class=""><a class="list__btn" href="/konfigurator">Objednat box</a></li>
             <li class=""><a class="list__lang--cz" href="/">CZ</a></li>
           </ul>
         </nav>
