PostCube - Svg added into How it works

--- a/postcube.cz/src/stylesheets/main.scss
+++ b/postcube.cz/src/stylesheets/main.scss
@@ -64,7 +64,7 @@ svg {
   }
 
   .after-icon:after {
-    content: url("assets/css/line.svg");
+    content: url("/assets/css/line.svg");
     display: block;
     width: 100px;
     height: 2px;
