--- a/postcube.cz/src/html/konfigurator/index.njk
+++ b/postcube.cz/src/html/konfigurator/index.njk
@@ -13,23 +13,76 @@
   <meta property="og:site_name" content="postcube.cz">
 
   <style>
-    {# TBD #}
+    .main-info h1 {
+      font-size: 2rem;
+    }
+    form h2 {
+      font-size: 1.5rem;
+      color: #707070;
+    }
   </style>
 
 {% endblock %}
 
 {% block content %}
   <section id="main-info" class="main-info">
-    <div class="mdc-layout-grid">
-      <div class="mdc-layout-grid__inner layout-wrapper">
-        <div class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-          <h1>Konfigurátor</h1>
-          <p>Sestavte su PostCube na míru podle Vašich představ.</p>
-        </div>
-        <div class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+    <form id="configuration-form">
+      <div class="mdc-layout-grid">
+        <div class="mdc-layout-grid__inner layout-wrapper">
+          <div class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+            <h1>Objednejte si box podle vašich představ</h1>
+            <h2>Velikost boxu</h2>
+            {% for item in configurator.sizes %}
+              <label>
+                {{ item.label }}<input type="radio" name="box-size" value="{{ item.value }}"/>
+              </label>
+            {% endfor %}
+
+            <h2>Barva</h2>
+            <select name="color">
+              {% for item in configurator.colors %}
+                <option value="{{ item.value }}">
+                  {{ item.label }}
+                </option>
+              {% endfor %}
+            </select>
+
+            {% for item in configurator.accessories %}
+              <h2>{{ item.name }}</h2>
+              {% for option in item.options %}
+                <label>
+                  {{ option.label }}<input type="radio" name="{{ item.name }}" value="{{ option.value }}"/>
+                </label>
+              {% endfor %}
+            {% endfor %}
+          </div>
+          <div class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+            {# tbd, order overview ~ product list, prices and total price #}
+            <button type="submit">Pokračovat</button>
+          </div>
         </div>
       </div>
-    </div>
+      <script>
+        const form = document.getElementById('configuration-form');
+
+        for (let input of form.querySelectorAll('input, select')) {
+          input.addEventListener('change', (event) => {
+            const name = event.target.name;
+            const value = event.target.value;
+            console.log(name + " changed to " + value);
+            // tbd, 1. update order preview (product list and prices)
+          });
+        }
+
+        form.addEventListener('submit', event => {
+          event.preventDefault();
+          // tbd, 1. serilize form
+          // tbd, 2. validate
+          // tbd, 3. generate product code based on selected options
+          // tbd, 4. using https://gist.github.com/junkycoder/a98c8e2c9c4804b6e2209acaf3c5fea7
+          // tbd, 5. redirect to url like https://chytrybox.myshoptet.com/?c=NDYvU0VEKzU4LzMwKzYxKzY0
+        });
+      </script>
+    </form>
   </section>
 {% endblock %}
-
