--- a/postcube.cz/src/html/konfigurator/index.njk
+++ b/postcube.cz/src/html/konfigurator/index.njk
@@ -88,7 +88,7 @@
             <div class="select-container">
               {% for item in configurator.sizes %}
                 <label class="main-info__radio-container">
-                  <input type="radio" class="input-radio" name="size" value="{{ item.value }}"/>
+                  <input type="radio" class="input-radio" name="size" value="{{ item.value }}" {{ "checked" if item.default }}/>
                   <div class="input-radio--custom">{{ item.label }}</div>
                 </label>
               {% endfor %}
@@ -98,7 +98,7 @@
             <div class="select-container">
               <select name="color" class="select-dropdown">
                 {% for item in configurator.colors %}
-                  <option value="{{ item.value }}">
+                  <option value="{{ item.value }}" {{ "selected" if item.default }}>
                     {{ item.label }}
                   </option>
                 {% endfor %}
@@ -110,7 +110,7 @@
               <div class="select-container">
                 {% for option in item.options %}
                   <label class="main-info__radio-container">
-                    <input type="radio" class="input-radio" name="{{ item.name }}" value="{{ option.value }}"/>
+                    <input type="radio" class="input-radio" name="{{ item.name }}" value="{{ option.value }}" {{ "checked" if option.default }}/>
                     <div class="input-radio--custom">{{ option.label }}</div>
                   </label>
                 {% endfor %}
@@ -118,6 +118,13 @@
             {% endfor %}
           </div>
           <div class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+            <h3>Shrnutí objednávky</h3>
+            <div id="order-preview"></div>
+            <script>
+              function renderOrderPreview(payload) {
+                console.log(payload)
+              }
+            </script>
             {# tbd, order overview ~ product list, prices and total price #}
             <button type="submit">Pokračovat</button>
           </div>
@@ -130,6 +137,8 @@
           const name = event.target.name;
           const value = event.target.value;
           console.log(name + " changed to " + value);
+          const data = serialize(form);
+          console.log('Updated form data:', data)
           // tbd, 1. update order preview (product list and prices)
         });
 
@@ -141,6 +150,16 @@
           // tbd, 4. using https://gist.github.com/junkycoder/a98c8e2c9c4804b6e2209acaf3c5fea7
           // tbd, 5. redirect to url like https://chytrybox.myshoptet.com/?c=NDYvU0VEKzU4LzMwKzYxKzY0
         });
+
+        function serialize(formElement) {
+          const result = {};
+          for (let inputElement of formElement.querySelectorAll('input, select')) {
+            if (inputElement.selected || inputElement.checked || inputElement.type.startsWith('select')) {
+              result[inputElement.name] = inputElement.value;
+            }
+          }
+          return result;
+        }
       </script>
     </form>
   </section>
