--- a/postcube.cz/src/html/components/how-it-works.njk
+++ b/postcube.cz/src/html/components/how-it-works.njk
@@ -3,7 +3,8 @@
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h2>A takhle jednoduché to je</h2>
     </div>
-    <div class="after-icon icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+    <div
+      class="after-icon icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
       <svg xmlns="http://www.w3.org/2000/svg" width="45.993" height="40.286" viewBox="0 0 45.993 40.286">
         <defs>
           <style>.a {
@@ -18,7 +19,7 @@
       <p>V&nbsp;e-shopu zadáte číslo své PostCube, vyberete dopravce a zaplatíte.</p>
     </div>
     <div
-      class="after-icon icon-section__content link-icon--after-2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+      class="after-icon icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
       <svg xmlns="http://www.w3.org/2000/svg" width="46.093" height="37.662" viewBox="0 0 46.093 37.662">
         <defs>
           <style>.a {
@@ -34,7 +35,7 @@
         zásilku.</p>
     </div>
     <div
-      class="icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+      class="after-icon--last icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
       <svg xmlns="http://www.w3.org/2000/svg" width="53.745" height="37.474" viewBox="0 0 53.745 37.474">
         <defs>
           <style>.a {
@@ -79,8 +80,6 @@
       <h3>Odesílání z&nbsp;boxu</h3>
       <p>Chcete vrátit zboží nebo odeslat zásilku? V&nbsp;aplikaci stačí vyplnit
         údaje a balík vložit do&nbsp;boxu.</p>
-    </div>
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
     </div>
     <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <a href="#contact" class="action-btn__label">Objednat PostCube</a>
