--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -25,6 +25,20 @@
     .testimonial__content {
       max-width: 520px;
     }
+    @media (max-width: 839px) {
+      .main-info img {
+        display: block;
+      }
+      .main-info .mdc-layout-grid {
+        padding: 0;
+      }
+      .main-info__content {
+        padding: 20px;
+      }
+      .main-info__bg {
+        align-self: center;
+      }
+    }
 
     @media (min-width: 840px) and (max-width: 2039px) {
       .main-info {
@@ -34,6 +48,9 @@
         background-position: center left;
         background-repeat: no-repeat;
         margin-top: 4em;
+      }
+      .main-info img {
+        display: none;
       }
     }
     @media (min-width: 2040px) {
@@ -47,6 +64,9 @@
         min-height: 600px;
         margin-top: 4em;
       }
+      .main-info img {
+        display: none;
+      }
     }
   </style>
 
@@ -56,9 +76,10 @@
   <section id="" class="main-info">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner layout-wrapper">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <div class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <img alt="Fotka PostCube Kurýra" src="https://res.cloudinary.com/topmonks/image/upload/v1620806015/postcube.cz/deliveryman.png">
         </div>
-        <div class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <div class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <h1>Nečekejte na kurýra</h1>
           <p>Je spousta lepších činností než čekání na kurýra. S&nbsp;chytrou
             schránkou PostCube si zásilku vyzvednete, až vy budete&nbsp;chtít!
